--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -21,27 +21,25 @@ jobs:
         with:
           node-version: 17
           registry-url: https://npm.pkg.github.com/
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Restore keys from cache
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
       - name: Checkout duckdb
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           repository: 'duckdb/duckdb'
-      - run: cd ../..
+      - run: cd ../.. && ls
       - run: |
-          wget https://musl.cc/aarch64-linux-musl-cross.tgz
+          wget -q https://musl.cc/aarch64-linux-musl-cross.tgz
           tar -xf aarch64-linux-musl-cross.tgz
       - name: Install modules and build
         run: |
           export CC=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
           export CXX=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
-          yarn install
+          echo $CXX
+          yarn install && yarn build:duckdb && yarn build:addon
+      - run: |
+          zip -j build-arm64.zip build/Release
+      - uses: actions/upload-artifact@v2
+        with:
+          name: node-duckdb-arm64
+          path: |
+            node-duckdb-arm64.zip
