--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -30,11 +30,11 @@ jobs:
       - name: Install OpenSSL 1.1.1
         run: |
           export AMUSL=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-
-          sudo apt-get install build-essential checkinstall zlib1g-dev -y -qq
+          sudo apt-get install zlib1g-dev -y -qq
           wget https://www.openssl.org/source/openssl-1.1.1n.tar.gz
           tar -xf openssl-1.1.1n.tar.gz
           cd openssl-1.1.1n
-          ./Configure linux-aarch64 --cross-compile-prefix=$(echo $AMUSL) --prefix=/usr/local/ssl --openssldir=/usr/local/ssl -static zlib
+          ./Configure linux-aarch64 --cross-compile-prefix=$(echo $AMUSL) --prefix=/usr/local/ssl --openssldir=/usr/local/ssl -static -lz zlib
           make
           make install
           echo "/usr/local/ssl/lib" > /etc/ld.so.conf.d/openssl-1.1.1n.conf
