--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -34,9 +34,9 @@ jobs:
           tar -xf openssl-1.1.1n.tar.gz
           cd openssl-1.1.1n
           ./Configure linux-aarch64 --cross-compile-prefix=$(echo $AMUSL) --prefix=/usr/local/ssl --openssldir=/usr/local/ssl -static no-zlib
-          make
-          make install
-          echo "/usr/local/ssl/lib" > /etc/ld.so.conf.d/openssl-1.1.1n.conf
+          sudo make
+          sudo make install
+          sudo echo "/usr/local/ssl/lib" > /etc/ld.so.conf.d/openssl-1.1.1n.conf
           ldconfig -v
       - name: Install modules and build
         run: |
