--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -40,7 +40,8 @@ jobs:
           sudo ldconfig -v
       - name: Install modules and build
         run: |
-          sudo apt-get install gcc-multilib g++-multilib -y -qq
+          sudo apt-get update -y -qq
+          sudo apt-get install gcc-multilib g++-multilib -y -qq --fix-missing
           export CC=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
           export CXX=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
           yarn install && yarn build:duckdb && yarn build:addon
