--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -40,8 +40,7 @@ jobs:
           sudo ldconfig -v
       - name: Install modules and build
         run: |
-          sudo apt-get update -y -qq
-          sudo apt-get install gcc-multilib g++-multilib -y -qq --fix-missing
+          ln -s $(pwd)/aarch64-linux-musl-cross/aarch64-linux-musl/include/c++/11.2.1/wchar.h /usr/include/wchar.h
           export CC=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
           export CXX=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
           yarn install && yarn build:duckdb && yarn build:addon
