--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -39,6 +39,8 @@ jobs:
           sudo sh -c "echo '/usr/local/ssl/lib' >> /etc/ld.so.conf.d/openssl-1.1.1n.conf"
           sudo ldconfig -v
       - name: Install modules and build
+        env:
+          OPENSSL_ROOT_DIR: /usr/local/ssl
         run: |
           sudo apt-get remove libc6-dev -y -qq
           export CC=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
