--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -48,6 +48,7 @@ jobs:
           sudo apt-get remove libc6-dev -y -qq
           export CC=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
           export CXX=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
+          npm config set cmake_C `pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc && npm config set cmake_CXX `pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
           yarn install --ignore-scripts && yarn build:duckdb && yarn build:addon
       - run: |
           zip -j build-arm64.zip build/Release
