--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -51,7 +51,7 @@ jobs:
           npm config set cmake_C `pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc && npm config set cmake_CXX `pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
           yarn install --ignore-scripts && yarn build:duckdb && yarn build:addon
       - run: |
-          zip -j build-arm64.zip build/Release
+          zip -j node-duckdb-arm64.zip build/Release
           zip -j duckdb_cli-linux-arm64.zip duckdb/build/release/duckdb
       - uses: actions/upload-artifact@v3
         with:
