--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -50,7 +50,7 @@ jobs:
           export CC=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
           export CXX=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
           npm config set cmake_CC `pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc && npm config set cmake_CXX `pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
-          npm install --ignore-scripts && npm build:duckdb && npm build:addon
+          yarn install --ignore-scripts && npm build:duckdb && npm build:addon
       - run: |
           zip -j node-duckdb-arm64.zip build/Release
           zip -j duckdb_cli-linux-arm64.zip duckdb/build/release/duckdb
