--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           sudo apt-get remove libc6-dev libssl-dev -y -qq
           sudo apt-get install ninja-build
-          wget -q http://more.musl.cc/10/x86_64-linux-musl/aarch64-linux-musl-cross.tgz # Alpine 3.15 ships with libstc++.28 so we must build with gcc 10 until 3.16 is shipped
+          wget -q http://more.musl.cc/10/x86_64-linux-musl/aarch64-linux-musl-cross.tgz
           tar -xf aarch64-linux-musl-cross.tgz
       - name: Build & install OpenSSL 1.1.1
         run: |
@@ -46,20 +46,29 @@ jobs:
           BUILD_HTTPFS: 1
           BUILD_FTS: 1
           OPENSSL_ROOT_DIR: /usr/local/ssl
+          GEN: ninja
         run: |
           export CC=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
           export CXX=`pwd`/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++
-          yarn install --ignore-scripts && cd duckdb && GEN=ninja make && cd - && yarn build:addon
+          yarn install --ignore-scripts && cd duckdb && make && cd - && yarn build:addon
       - run: |
-          zip -j node-duckdb-arm64.zip build/Release/libduckdb.so build/Release/node-duckdb.addon
-          zip -j duckdb_cli-linux-arm64.zip duckdb/build/release/duckdb
+          zip -j node-duckdb-arm64-musl.zip build/Release/libduckdb.so build/Release/node-duckdb-addon.node
+          zip -j duckdb_cli-arm64-musl.zip duckdb/build/release/duckdb
       - uses: actions/upload-artifact@v3
         with:
           name: node-duckdb-arm64
           path: |
-            node-duckdb-arm64.zip
+            node-duckdb-arm64-musl.zip
       - uses: actions/upload-artifact@v3
         with:
           name: duckdb-cli-arm64
           path: |
-            duckdb_cli-linux-arm64.zip
+            duckdb_cli-arm64-musl.zip
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            duckdb_cli-arm64-musl.zip
+            node-duckdb-arm64-musl.zip
+      
