--- a/.github/workflows/arm64.yaml
+++ b/.github/workflows/arm64.yaml
@@ -21,7 +21,8 @@ jobs:
         with:
           fetch-depth: 0
           repository: 'duckdb/duckdb'
-          path: duckdb  
+          path: duckdb
+      - run: sudo apt-get remove --purge -y -qq libc6-dev libssl-dev man-db  && sudo apt-get install -y -qq ninja-build
       - name: Setup cross toolchain (temp clone from old repo, until azure block is lifted see https://github.com/orgs/community/discussions/27906)
         # Alpine 3.15 ships with libstc++.28 so we must build with gcc 10 until 3.16 is shipped
 #         run: |
